--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
         <p>Este material foi preparado por um entusiasta de nutrição e bem-estar que reuniu práticas simples e comprovadas para quem precisa de um plano realista. (Você pode editar aqui para colocar seu nome e credenciais.)</p>
 
         <h3>Contato</h3>
-        <p>Para parcerias, imprensa ou suporte: <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></p>
+        <p>Para parcerias, imprensa ou suporte: <a href="mailto:seuemail@exemplo.com">romanorogerio26@gmail.com</a></p>
       </div>
     </main>
 
